<resources>
    <string name="app_name">Mi_proyecto</string>
    <string name="inicia_una_nueva_aventura_con_box_message_y_descubre_una_nueva_forma_de_ver_el_mundo">Inicia una nueva aventura con BOX-MESSAGE y descubre una nueva forma de ver el mundo</string>
    <string name="box_message">BOX-MESSAGE</string>
    <string name="comienza">Comienza</string>
    <string name="registrate">Registrate</string>
    <string name="la_aventura_esta_por_iniciar_por_favor_inicia_sesion">La aventura esta por iniciar, por favor inicia sesion</string>
    <string name="box_message_login">BOX-MESSAGE</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="ingresa_tu_contrase_a">Ingresa tu contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="recupera_tu_contrase_a">Recupera tu contraseña</string>
    <string name="ingresa_con_google">Ingresa con Google</string>
    <string name="box_mesagge">BOX-MESAGGE</string>
    <string name="olvidaste_tu_contrase_a">Olvidaste tu contraseña?</string>
    <string name="ingresa_un_correo_electronico_y_te_enviaremos_un_codigo_de_recuperaci_n">Ingresa un correo electronico y te enviaremos un codigo de recuperación</string>
    <string name="ingresa_un_correo">Ingresa un correo</string>
    <string name="enviar_codigo">ENVIAR CODIGO</string>
    <string name="box_message_profile">BOX-MESSAGE</string>
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="editar">EDITAR</string>
    <string name="box_message_register">BOX-MESSAGE</string>
    <string name="ingresa_tus_datos_para_registrarte_en_box_message">Ingresa tus datos para registrarte en BOX-MESSAGE</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="ingresa_tus_apellidos">Ingresa tus apellidos</string>
    <string name="ingresa_tu_correo_register">Ingresa tu correo</string>
    <string name="ingresa_un_n_mero_de_telefono">Ingresa un número de telefono</string>
    <string name="crea_una_contrase_a">Crea una contraseña</string>
    <string name="confirma_tu_contrase_a">Confirma tu contraseña</string>
    <string name="he_le_do_y_acepto_los_t_rminos_y_condiciones_de_box_message">He leído y acepto los términos y condiciones de BOX-MESSAGE</string>
    <string name="registrarte">REGISTRARTE</string>
    <string name="box_message_splash">BOX-MESSAGE</string>
    <string name="kaleth_santiago_triana_barrios">Kaleth Santiago Triana Barrios</string>
    <string name="registrate_login">Registrate</string>
    <string name="inicio">Inicio</string>
    <string name="mi_perfil">mi perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="box_message1">BOX-MESSAGE</string>
    <string name="pon_tu_nombre_nuevo">Pon tu nombre nuevo</string>
    <string name="pon_tu_nuevo_apellido">Pon tu nuevo apellido</string>
    <string name="pon_tu_nuevo_telefono">Pon tu nuevo telefono</string>
    <string name="pon_tu_nuevo_correo">Pon tu nuevo correo</string>
    <string name="guadar_cambios">GUADAR CAMBIOS</string>

</resources>