<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/Logo_Regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/Nom_App"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="casual"
            android:text="@string/box_message_register"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Tex_uno_Regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:text="@string/ingresa_tus_datos_para_registrarte_en_box_message"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Campo_nom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/estilo_redondeado"
            android:fontFamily="casual"
            android:hint="@string/ingresa_tu_nombre" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Campo_apell"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/estilo_redondeado"
            android:fontFamily="casual"
            android:hint="@string/ingresa_tus_apellidos" />

        <EditText
            android:id="@+id/campo_correo"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/estilo_redondeado"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/ingresa_tu_correo_register"
            android:inputType="textEmailAddress" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_tel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/estilo_redondeado"
            android:fontFamily="casual"
            android:hint="@string/ingresa_un_n_mero_de_telefono" />

        <EditText
            android:id="@+id/campo_contr"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/estilo_redondeado"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/crea_una_contrase_a"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/campo_contr2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/estilo_redondeado"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/confirma_tu_contrase_a"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/chulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="cursive"
            android:text="@string/he_le_do_y_acepto_los_t_rminos_y_condiciones_de_box_message"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_regis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/green"
            android:text="@string/registrarte" />

    </LinearLayout>
</ScrollView>
