<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/Titulo_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/box_message_profile"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/Img_perf_edit"
        android:layout_width="159dp"
        android:layout_height="142dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_perfil"
        android:layout_gravity="center_horizontal"/>


    <EditText
        android:id="@+id/edit_nom"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_redondeado"
        android:fontFamily="casual"
        android:hint="@string/pon_tu_nombre_nuevo"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/edit_apellido"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_redondeado"
        android:fontFamily="casual"
        android:text="@string/pon_tu_nuevo_apellido"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_telef"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_redondeado"
        android:fontFamily="casual"
        android:text="@string/pon_tu_nuevo_telefono"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_correo"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/estilo_redondeado"
        android:fontFamily="casual"
        android:text="@string/pon_tu_nuevo_correo"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="201dp"
        android:layout_height="87dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/guadar_cambios"
        android:textSize="24sp" />

</LinearLayout>
</ScrollView>