<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/Logo_rec_pass"
            android:layout_width="142dp"
            android:layout_height="117dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/Titulo_rec_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="casual"
            android:text="@string/box_mesagge"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/text_uno_rec_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="cursive"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/img_candado"
            android:layout_width="186dp"
            android:layout_height="167dp"
            android:layout_marginBottom="16dp"
            app:srcCompat="@drawable/contrase_a" />

        <TextView
            android:id="@+id/text_2_rec_pass"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="cursive"
            android:text="@string/ingresa_un_correo_electronico_y_te_enviaremos_un_codigo_de_recuperaci_n"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/correo_rec_pass"
            android:layout_width="302dp"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/estilo_redondeado"
            android:ems="10"
            android:hint="@string/ingresa_un_correo"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btn_env_cod"
            android:layout_width="151dp"
            android:layout_height="68dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/enviar_codigo"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>